tests/invalid/aditi_update_derived_relation.err_exp
aditi_update_derived_relation.m:018: In `aditi_insert' of predicate `aditi_update_derived_relation.q/3':
aditi_update_derived_relation.m:018:   error: the modified predicate is not a base relation.
For more information, try recompiling with `-E'.
